--- a/index.html
+++ b/index.html
@@ -16,11 +16,66 @@
     <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 <body>
-    
+    <div class="web-app">
+        <div class="web-app-top">
+            <nav class="navbar">
+                <div class="container">
+                <!-- Boolean icon -->
+                  <figure class="w-25 m-0">
+                    <img class="w-50" src="./assets/img/mobile-logo.png" alt="">
+                  </figure>
+                <!-- Searchbar -->
+                  <form class="d-flex" role="search">
+                    <button class="btn" type="submit">X</button>
+                    <input class="searchbar form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                  </form>
+                  <!-- Hamburger menu -->
+                  <ul class="nav nav-tabs">
+                    <li class="nav-item dropdown">
+                      <a class="nav-link" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Camp</a>
+                      <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Action</a></li>
+                        <li><a class="dropdown-item" href="#">Another action</a></li>
+                        <li><a class="dropdown-item" href="#">Something else here</a></li>       
+                      </ul>
+                    </li>
+                  </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="web-app-middle row">
+            <div class="web-app-sidebar col-2 d-flex flex-column justify-content-between">
+                <ul>
+                    <li>casa</li>
+                    <li>graph</li>
+                    <li>graph2</li>
+                </ul>
+                <ul>
+                    <li>
+                        settings
+                    </li>
+                </ul>
+            </div>
+            <div class="web-app-middle-right col-10">
+                <div>
+                    nuovo studente +
+                </div>
+                <div>
+                    boolean
+                </div>
+                <div>
+                    studenti online
+                </div>
+                <div>
+                    125
+                </div>
+            </div>
+        </div>
+    </div>
 
-     <!-- JS Boostrap -->
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
-     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
-     crossorigin="anonymous"></script>
+    <!-- JS Boostrap -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" 
+    crossorigin="anonymous"></script>
 </body>
 </html>
