fix: anchor comment

--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
                                 <h2>Boolean</h2>
                                 <span class="im-round p-1" style="background-color: var(--bg-icon);">Piano blaze</span>
                             </div>
+                            <!-- *FIXME - QUI VA INSERITO COME BREADCRUMB E NON COME DIV* -->
                             <div class="p-2">
                                 <span class="im-round p-1" style="background-color: var(--bg-icon)">3 app</span>
                                 <span><svg class="mb-1" xmlns="http://www.w3.org/2000/svg" height="20" width="20" fill="var(--color-icon-white)" viewBox="0 0 512 512"><path d="M470.6 278.6c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L402.7 256 265.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0l160-160zm-352 160l160-160c12.5-12.5 12.5-32.8 0-45.3l-160-160c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L210.7 256 73.4 393.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0z"/></svg></span>
