--- a/index.html
+++ b/index.html
@@ -119,8 +119,18 @@
         <div class="w-100 text-light">
             <div id="blue-section">
                 <!-- Registration form -->
-                <div class="p-2">
-                    Nuovo studente 
+                <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas"    data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
+                    <i class="fa-solid fa-plus"></i>
+                </button>
+
+                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    ...
+                </div>
                 </div>
                 <nav aria-label="breadcrumb">
                     <ol class="breadcrumb p-3">
