--- a/index.html
+++ b/index.html
@@ -129,39 +129,173 @@
                         <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
                         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                     </div>
-                    <div class="offcanvas-body">
-                        <div class="bd-example m-0 border-0">
-                            <form>
-                              <div class="mb-3">
-                                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-                                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
-                              </div>
-                              <div class="mb-3">
-                                <label for="exampleInputPassword1" class="form-label">Password</label>
-                                <input type="password" class="form-control" id="exampleInputPassword1">
-                              </div>
-                              <div class="mb-3">
-                                <label for="exampleSelect" class="form-label">Select menu</label>
-                                <select class="form-select" id="exampleSelect">
-                                  <option selected="">Open this select menu</option>
-                                  <option value="1">One</option>
-                                  <option value="2">Two</option>
-                                  <option value="3">Three</option>
-                                </select>
-                              </div>
-                              <div class="mb-3">
-                                <label class="form-label" for="customFile">Foto</label>
-                                <input type="file" class="form-control" id="customFile">
-                              </div>
-                              <div class="mb-3 form-check">
-                                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                                <label class="form-check-label" for="exampleCheck1">Seleziona per proseguire</label>
-                              </div>
-                              <button type="submit" class="btn btn-primary">Salva</button>
-                              <button type="reset" class="btn btn-warning">Svuota</button>
-                            </form>
+                    <!-- After pressing the button -->
+                    <div class="offcanvas-body">   
+                        <form>    
+                            <!-- Name and surname -->
+                            <div class="row">
+                                <div class="mb-3">
+                                    <label class="form-label">Name</label>
+                                    <input type="name" name="Name" class="form-control">
+                                </div>
+                                <div class="mb-3">
+                                    <label class="form-label">Cognome</label>
+                                    <input type="name" name="Surname" class="form-control">
+                                </div>
                             </div>
+                            <!-- Email and password -->
+                            <form class="row g-3">
+                                <div class="col-md-6">
+                                    <label class="form-label">Email</label>
+                                    <div class="input-group mb-3">
+                                        <span class="input-group-text" id="basic-addon1">@</span>
+                                        <input type="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon1">
+                                      </div>
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="inputPassword4" class="form-label">Password</label>
+                                  <input type="password" class="form-control" id="inputPassword4">
+                                </div>
+                                <!-- Address -->
+                                <div class="col-12">
+                                  <label for="inputAddress" class="form-label">Indirizzo</label>
+                                  <input type="text" class="form-control" id="inputAddress" placeholder="">
+                                </div>
+                                <div class="col-md-6">
+                                  <label for="inputCity" class="form-label">Città</label>
+                                  <input type="text" class="form-control" id="inputCity">
+                                </div>
+                                <div class="col-md-4">
+                                  <label for="inputState" class="form-label">Provincia</label>
+                                  <select id="inputState" class="form-select">                                  
+                                    <option value="AG">Agrigento</option>
+                                    <option value="AL">Alessandria</option>
+                                    <option value="AN">Ancona</option>
+                                    <option value="AO">Aosta</option>
+                                    <option value="AR">Arezzo</option>
+                                    <option value="AP">Ascoli Piceno</option>
+                                    <option value="AT">Asti</option>
+                                    <option value="AV">Avellino</option>
+                                    <option value="BA">Bari</option>
+                                    <option value="BT">Barletta-Andria-Trani</option>
+                                    <option value="BL">Belluno</option>
+                                    <option value="BN">Benevento</option>
+                                    <option value="BG">Bergamo</option>
+                                    <option value="BI">Biella</option>
+                                    <option value="BO">Bologna</option>
+                                    <option value="BZ">Bolzano</option>
+                                    <option value="BS">Brescia</option>
+                                    <option value="BR">Brindisi</option>
+                                    <option value="CA">Cagliari</option>
+                                    <option value="CL">Caltanissetta</option>
+                                    <option value="CB">Campobasso</option>
+                                    <option value="CE">Caserta</option>
+                                    <option value="CT">Catania</option>
+                                    <option value="CZ">Catanzaro</option>
+                                    <option value="CH">Chieti</option>
+                                    <option value="CO">Como</option>
+                                    <option value="CS">Cosenza</option>
+                                    <option value="CR">Cremona</option>
+                                    <option value="KR">Crotone</option>
+                                    <option value="CN">Cuneo</option>
+                                    <option value="EN">Enna</option>
+                                    <option value="FM">Fermo</option>
+                                    <option value="FE">Ferrara</option>
+                                    <option value="FI">Firenze</option>
+                                    <option value="FG">Foggia</option>
+                                    <option value="FC">Forl&igrave;-Cesena</option>
+                                    <option value="FR">Frosinone</option>
+                                    <option value="GE">Genova</option>
+                                    <option value="GO">Gorizia</option>
+                                    <option value="GR">Grosseto</option>
+                                    <option value="IM">Imperia</option>
+                                    <option value="IS">Isernia</option>
+                                    <option value="AQ">L'aquila</option>
+                                    <option value="SP">La spezia</option>
+                                    <option value="LT">Latina</option>
+                                    <option value="LE">Lecce</option>
+                                    <option value="LC">Lecco</option>
+                                    <option value="LI">Livorno</option>
+                                    <option value="LO">Lodi</option>
+                                    <option value="LU">Lucca</option>
+                                    <option value="MC">Macerata</option>
+                                    <option value="MN">Mantova</option>
+                                    <option value="MS">Massa-Carrara</option>
+                                    <option value="MT">Matera</option>
+                                    <option value="ME">Messina</option>
+                                    <option value="MI">Milano</option>
+                                    <option value="MO">Modena</option>
+                                    <option value="MB">Monza e Brianza</option>
+                                    <option value="NA">Napoli</option>
+                                    <option value="NO">Novara</option>
+                                    <option value="NU">Nuoro</option>
+                                    <option value="OR">Oristano</option>
+                                    <option value="PD">Padova</option>
+                                    <option value="PA">Palermo</option>
+                                    <option value="PR">Parma</option>
+                                    <option value="PV">Pavia</option>
+                                    <option value="PG">Perugia</option>
+                                    <option value="PU">Pesaro e Urbino</option>
+                                    <option value="PE">Pescara</option>
+                                    <option value="PC">Piacenza</option>
+                                    <option value="PI">Pisa</option>
+                                    <option value="PT">Pistoia</option>
+                                    <option value="PN">Pordenone</option>
+                                    <option value="PZ">Potenza</option>
+                                    <option value="PO">Prato</option>
+                                    <option value="RG">Ragusa</option>
+                                    <option value="RA">Ravenna</option>
+                                    <option value="RC">Reggio Calabria</option>
+                                    <option value="RE">Reggio Emilia</option>
+                                    <option value="RI">Rieti</option>
+                                    <option value="RN">Rimini</option>
+                                    <option value="RM">Roma</option>
+                                    <option value="RO">Rovigo</option>
+                                    <option value="SA">Salerno</option>
+                                    <option value="SS">Sassari</option>
+                                    <option value="SV">Savona</option>
+                                    <option value="SI">Siena</option>
+                                    <option value="SR">Siracusa</option>
+                                    <option value="SO">Sondrio</option>
+                                    <option value="SU">Sud Sardegna</option>
+                                    <option value="TA">Taranto</option>
+                                    <option value="TE">Teramo</option>
+                                    <option value="TR">Terni</option>
+                                    <option value="TO">Torino</option>
+                                    <option value="TP">Trapani</option>
+                                    <option value="TN">Trento</option>
+                                    <option value="TV">Treviso</option>
+                                    <option value="TS">Trieste</option>
+                                    <option value="UD">Udine</option>
+                                    <option value="VA">Varese</option>
+                                    <option value="VE">Venezia</option>
+                                    <option value="VB">Verbano-Cusio-Ossola</option>
+                                    <option value="VC">Vercelli</option>
+                                    <option value="VR">Verona</option>
+                                    <option value="VV">Vibo valentia</option>
+                                    <option value="VI">Vicenza</option>
+                                    <option value="VT">Viterbo</option>
+                                  </select>
+                                </div>
+                                <div class="col-md-2">
+                                  <label for="inputZip" class="form-label">CAP</label>
+                                  <input type="text" class="form-control" id="inputZip">
+                                </div>
+                              </form>
+                            <!-- Picture upload -->
+                            <div class="mb-3">
+                            <label class="form-label" for="customFile">Foto</label>
+                            <input type="file" class="form-control" id="customFile">
+                            </div>
+                            <!-- Checkbox -->
+                            <div class="mb-3 form-check">
+                            <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                            <label class="form-check-label" for="exampleCheck1">Seleziona per proseguire</label>
+                            </div>
+                            <!-- Save and clear button -->
+                            <button type="submit" class="btn btn-primary">Salva</button>
+                            <button type="reset" class="btn btn-warning">Svuota</button>
+                        </form>
                     </div>
                 </div>
                 </div>
