next classes section

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                     </button>
                     <div class="offcanvas offcanvas-end w-100 w-"  tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                         <div class="offcanvas-header">
-                            <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
                     <!-- After pressing the button -->
                         <div class="offcanvas-body">   
-                            <form>    
+                        <form>    
                             <!-- Name and surname -->
                             <div class="row">
                                 <div class="mb-3">
@@ -295,15 +295,38 @@
                             <!-- Save and clear button -->
                             <button type="submit" class="btn btn-primary">Salva</button>
                             <button type="reset" class="btn btn-warning">Svuota</button>
-                            </form>
+                        </form>
                         </div>
-                    </div>  
+                    </div>
+                </div>
+                <nav aria-label="breadcrumb ">
+                    <ol class="breadcrumb p-3">
+                        <li class="breadcrumb-item">
+                            <a class="text-light text-decoration-none" href="#">Boolean</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-light text-decoration-none" href="#">Piano blaze</a>
+                        </li>
+                        <li class="breadcrumb-item" aria-current="page">
+                            <a class="text-light text-decoration-none" href="#">3 app</a>
+                        </li>
+                        <li class="breadcrumb-item" aria-current="page">
+                            <a class="text-light text-decoration-none" href="#">+</a>
+                        </li>
+                    </ol>
+                </nav>
+                <div class="ms-3 text-light  pb-3">
+                    <div>
+                        <p>Studenti online negli ultimi 30 minuti</p>
+                    </div>
+                    <div>
+                        <h2>125</h2>
+                    </div>
                 </div>
             </div>
-        </div>
-        
-        <div class="col-sm-10 col-lg-4 offset-1" style="border: 1px solid red;">
-            Prossime classi
+            <div class="col-sm-10 col-lg-4 offset-1 mt-3" style="border: 1px solid red;">
+                Prossime classi
+            </div>
         </div>
     </main>
     <!-- JS Boostrap -->
