--- a/index.html
+++ b/index.html
@@ -324,9 +324,24 @@
                     </div>
                 </div>
             </div>
-            <div class="col-sm-10 col-lg-4 offset-1 mt-3" style="border: 1px solid red;">
-                Prossime classi
+            <!-- Next classes  -->
+            <div class="container border-top border-start border-end rounded mt-3">
+                <div>
+                    <h2>Prossime classi</h2>
+                </div>
+                <div class="row">
+                    <div class="col-5 border-top ">
+                      <h5>Nome</h5>
+                    </div>
+                    <div class="col border-top">
+                      <h5>Stato</h5>
+                    </div>
+                    <div class="col border-top ">
+                      <h5>Azioni</h5>
+                    </div>
+                </div>
             </div>
+
         </div>
     </main>
     <!-- JS Boostrap -->
