--- a/index.html
+++ b/index.html
@@ -324,9 +324,10 @@
                     </div>
                 </div>
             </div>
+            
             <!-- Next classes  -->
             <div class="container border rounded my-3">
-                <div class="row">
+                <div class="row border-bottom">
                     <div class="col">
                         <h3>Prossime classi</h3>
                     </div>
@@ -508,7 +509,73 @@
                 </div>
             </div>
             
+            <!-- FAQ -->
+            <div class="container border rounded my-3">
+                <div class="row border-bottom">
+                    <div class="col">
+                        <h3>F.A.Q.</h3>
+                    </div>
+                </div>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          Come aggiungere un nuovo studente?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Prova col tasto <i class="fa-solid fa-plus border rounded p-1"></i></div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                          Come posso accedere alle informazioni del mio account?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Questo proprio non lo so...</div>
+                      </div>
+                    </div>
+                    <div class="accordion-item">
+                      <h2 class="accordion-header">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+                          Posso usare questa dashboard da mobile?
+                        </button>
+                      </h2>
+                      <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">Certo che sì, lo stai facendo adesso molto probabilmente.</div>
+                      </div>
+                    </div>
+                </div>
+            </div>
 
+            <!-- To Do List -->
+            <div class="container border rounded my-3">
+                <div class="row border">
+                    <div class="col">
+                        <h3>To do list</h3>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col border mx-3 mt-3 p-2">
+                        <input type="checkbox" name="" id="">
+                        <span>Kickoff nuove classi</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col border mx-3 p-2">
+                        <input type="checkbox" name="" id="">
+                        <span>Lezione su Bootstrap 5 in classe #115</span>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col border mx-3 p-2">
+                        <input type="checkbox" name="" id="">
+                        <span>Controllare username github stutenti</span>
+                    </div>
+                </div>
+            </div>
         </div>
     </main>
     <!-- JS Boostrap -->
