--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- Main part of the site -->
     <main class="d-flex" style="height: calc(100vh - 100px); position: relative;">
         <!-- Sidebar with buttons -->
-        <div id="sidebar" class="d-flex flex-column flex-shrink-0  position: absolute; h-100" style="width: fit-content;">
+        <div id="sidebar" class="d-flex flex-column" style="width: fit-content;">
             <ul class="nav nav-pills nav-flush flex-column mb-auto text-center">
                 <li>
                     <a href="#" class="nav-link py-3 rounded-0 d-flex align-items-center gap-3">
@@ -573,6 +573,32 @@
                     <div class="col border mx-3 p-2">
                         <input type="checkbox" name="" id="">
                         <span>Controllare username github stutenti</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Graph and active users -->
+            <div class="container border rounded my-3">
+                <div class="row d-flex flex-column">
+                    <img class="border" src="./assets/img/stats.jpeg" alt="">
+                    <div class="col border-bottom">
+                        <h3>Utenti Attivi</h3>
+                        <span>Lista degli utenti attivi nell'ultimo mese</span>
+                    </div>
+                    <div class="row">
+                        <div class="col border">
+                            Gennaio: 1200
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col border">
+                            Febbraio: 1200
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col border">
+                            Marzo: 1200
+                        </div>
                     </div>
                 </div>
             </div>
