--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                         <button class="btn btn-outline-light" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">
                             <i class="fa-solid fa-plus"></i>
                         </button>
-                        <div class="offcanvas offcanvas-end w-100"  tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+                        <div class="offcanvas offcanvas-end offcanvas-md"  tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
                             <div class="offcanvas-header">
                             <h5 class="offcanvas-title" id="offcanvasRightLabel">Inserisci un nuovo studente</h5>
                             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -328,7 +328,7 @@
                             </ol>
                         </nav>
                     </div>
-                    <div class="col-12 col-md-3">
+                    <div class="col-12 col-md-4">
                         <h5>Studenti online negli ultimi 30 minuti</h5>
                         <span class="display-4 fw-bold">125</span>
                     </div>
